--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,21 @@ jobs:
 
       - name: Build qilish
         run: npm run build
+
+    deploy:
+    needs: build-test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: EC2 ga SSH ulanish va deploy qilish
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cd /var/www/nestjsTest
+            git pull origin main
+            npm install --production
+            npm run build
+            pm2 restart server
